# btc_sonify

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
btc_sonify/: __init__.py  bass.py  cli.py  config.py  data.py  detection.py  mapping.py  midi_writer.py  percussion.py  render.py  rubato.py  scales.py  sidecar.py  symphony.py  timeline.py  visualize.py  voice.py
docs/: MIXING_IN_LOGIC.md
tests/: test_data.py  test_detection.py  test_determinism.py  test_harmony_rhythm.py  test_mapping.py  test_markers.py  test_midi_writer.py  test_palette_bass.py  test_palette_overrides.py  test_percussion.py  test_render.py  test_rubato.py  test_scales.py  test_sidecar.py  test_soul.py  test_stems.py  test_symphony.py  test_visualize.py  test_voice.py
tests/fixtures/: sample_btc_daily.csv
