[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btc-sonify"
version = "0.1.0"
description = "Convert Bitcoin OHLCV candlestick data into MIDI music."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rob" }]
dependencies = [
    "ccxt>=4.3",
    "mido>=1.3",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# WAV rendering uses the `fluidsynth` CLI binary (brew install fluid-synth)
# rather than a Python binding — keeps deps lean and avoids ABI mismatches.
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
btc-sonify = "btc_sonify.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["btc_sonify"]
